test/samples/invalid/resolving/tvar_memvar_confusion.maruir
struct Foo<M> {
    arr: u8[] *M;
}

fun main<T>(size: u256)
locals
    p1: u8[] *#memory,
    p2: Foo<#storage> *#storage;
{
    entry:
        p1 := alloc u8[size] in #memory;
        p2 := alloc T in #storage;
        return;
}
